@@ -1,5 +1,13 @@
 2004-11-24 Bart Hakvoort  <gparted@users.sf.net>
 
+	* include/Utils.h,
+	  src/GParted_Core.cc,
+	  src/Partition.cc,
+	  src/TreeView_Detail.cc,
+	  src/VBox_VisualDisk.cc: marked some strings for translation ('unknown', 'used', 'unused') and replaced lowercase 'unallocated' with '---'.
+
+2004-11-24 Bart Hakvoort  <gparted@users.sf.net>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: fixed nasty error with resizing 'fixed-start filesystems'.
 	* src/Partition.cc: added a check to prevent unused space from being bigger then total space.
